levels-yamls/mongo-sts.yaml
---
apiVersion: "apps/v1"
kind: "StatefulSet"
metadata:
  name: "mongo-db"
spec:
  serviceName: "mongo-db"
  replicas: 1
  selector:
    matchLabels:
      app: "mongo-db"
  template:
    metadata:
      labels:
        app: "mongo-db"
    spec:
      containers:
        - name: "mongo-db"
          image: "mongo"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 27017
              name: "mongodb"
          volumeMounts:
            - name: "mongodb-persistent-storage"
              mountPath: "/data/db"
  volumeClaimTemplates:
    - metadata:
        name: "mongodb-persistent-storage"
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "mongo-db"
  labels:
    app: "mongo-db"
spec:
  ports:
    - name: "mongodb"
      port: 27017
      targetPort: 27017
  clusterIP: "None"
  selector:
    app: "mongo-db"
