levels-yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next-level
  annotations:
    kubernetes.io/ingress.class: "level5"
spec:
  rules:
  - host: test.khazna.task
    http:
      paths:
      - backend:
          service:
            name: svc
            port:
              number: 443
        path: /
        pathType: Prefix
